# blog-writer

./: .coverage  .gitignore  =7.0.0  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
app/: __init__.py  ai_utils.py  embedding_util.py  epub_util.py  main.py  markdown_util.py  mcp_util.py  models.py  notion_util.py  obsidian.py  rag_util.py  security.py  storage.py  task_automation.py  widget_util.py
app/routers/: __init__.py  ai.py  article_templates.py  auth.py  dictionary.py  drafts.py  epub.py  fs.py  generation_history.py  images.py  mcp.py  migrations.py  notion.py  obsidian.py  phrases.py  tasks.py  templates.py  widgets.py  writing_styles.py
docs/: google-auth.md  plan.md  spec.md  task_automation.md  tasks.md  todo.md
scripts/: debug_warnings.py  dev.sh  restart.sh  set_api_key.py  start.sh  stop.sh  task_automation_cli.py  task_scheduler.py  task_watcher.py  trace_warnings.py
test/: conftest.py  test_ai_utils_rag.py  test_ai_widgets.py  test_article_templates_api_validation.py  test_article_templates_validation.py  test_article_type_sanitize.py  test_dark_mode.py  test_epub_chapters.py  test_epub_highlights.py  test_epub_util.py  test_extra_context_prompt.py  test_generation_history.py  test_generation_history_api.py  test_google_auth.py  test_kindle_widget_full_import.py  test_kindle_widget_ui.py  test_markdown_util.py  test_mcp.py  test_notion_api.py  test_notion_util.py  test_obsidian_api.py  test_obsidian_config.py  test_rag_util.py  test_task_automation.py  test_url_fallback.py  test_widget_api.py  test_widget_management.py  test_widget_util.py  test_writing_style_ai.py  test_writing_style_api.py  test_writing_style_storage.py
test/ai/: __init__.py  test_writing_style_ai.py
test/api/: __init__.py  test_ai_router.py  test_article_templates_api_validation.py  test_article_templates_new_field_types.py  test_article_type_prompt_endpoint.py  test_generation_history_api.py  test_google_auth.py  test_images_api.py  test_notion_api.py  test_obsidian_api.py  test_widget_api.py  test_widget_suggestions_stream.py  test_writing_style_api.py  test_x_preview_api.py
test/helpers/: api.py  common.py
test/storage/: __init__.py  test_article_template_versions.py  test_article_templates_storage.py  test_markdown_posts.py  test_templates_migration.py  test_writing_style_storage.py
test/ui/: __init__.py  test_dark_mode.py
test/utils/: __init__.py  test_embedding_util.py  test_epub_chapters.py  test_epub_highlights.py  test_epub_util.py  test_markdown_util.py  test_notion_util.py  test_obsidian_config.py  test_rag_util.py  test_scrape_widget.py  (+1 more)
web/: next.config.js  package.json  tsconfig.json
(+53 files in other folders)
