[project]
name = "blog-writer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi[standard]>=0.115.0",
	"httpx>=0.27.0",
	"pydantic-settings>=2.4.0",
	"google-genai>=0.3.0",
	"cryptography>=43.0.1",
	"pytest>=8.3.0",
	"pytest-asyncio>=0.25.0",
	"python-jose[cryptography]>=3.3.0",
	"authlib>=1.2.0",
	"itsdangerous>=2.1.0",
	"ebooklib>=0.19",
	"scikit-learn>=1.5.0",
	"sentence-transformers>=5.1.0",
	"beautifulsoup4>=4.12.0",
	"fastmcp>=2.12.3",
	"SQLAlchemy>=2.0.0",
	"pytest-cov>=7.0.0",
]

[tool.setuptools]
packages = ["app"]


[tool.uv]
# uvでインストール時に発生しがちなビルド分離問題の回避など、必要な場合にここにオプションを置けます


[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
	"google",
	"google.genai",
	"cryptography",
	"cryptography.fernet",
	"authlib",
	"authlib.integrations.starlette_client",
	"jose",
	"fastmcp",
	"ebooklib",
	"sentence_transformers",
	"sklearn",
	"sklearn.neighbors",
	"sqlalchemy",
	"sqlalchemy.ext.declarative",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.18.1",
    "ruff>=0.13.0",
]

